subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_6.while
int f(int x) {
    for(int i=0; i < y; i=i+1) {
        x = x + 1;
    }
    return x;
}
